--- a/Controller/Final.css
+++ b/Controller/Final.css
@@ -6,7 +6,57 @@
     /*    margin-left: -403px;
         margin-top: -280px;*/
 }
+.ds4 .triggers {
+    width: 588px;
+    height: 90px;
+    position: absolute;
+    left: 109px;
+}
 
+.ds4 .trigger {
+    width: 99px;
+    height: 100%;
+    background: url(triggers.png);
+    opacity: 0;
+}
+
+.ds4 .trigger.left {
+    float: left;
+}
+
+.ds4 .trigger.right {
+    float: right;
+    background-position-x: 99px;
+}
+.ds4 .bumper {
+    width: 99px;
+    height: 23px;
+    background: url(bumper.png) no-repeat;
+    opacity: 0;
+}
+
+.ds4 .bumpers {
+    position: absolute;
+    width: 588px;
+    height: 23px;
+    left: 109px;
+    top: 94px;
+}
+
+.ds4 .bumper.pressed {
+    opacity: 1;
+}
+
+.ds4 .bumper.left {
+    /* -webkit-transform: rotateY(180deg); */
+    /* transform: rotateY(180deg); */
+    float: left;
+}
+
+.ds4 .bumper.right {
+    float: right;
+    transform: rotateY(180deg);
+}
 .ds4 .a {
     background-position: 0 0;
     bottom: 0;
@@ -39,7 +89,7 @@
 
 .ds4 .stick {
     position: absolute;
-    background: url(ps4-assets/sticks.svgz);
+    background: url(R.png);
     height: 94px;
     width: 94px;
 }
