--- a/Controller/Final.css
+++ b/Controller/Final.css
@@ -57,6 +57,31 @@
     float: right;
     transform: rotateY(180deg);
 }
+
+.ds4 .back, .ds4 .start {
+    background: url(start.png);
+    width: 28px;
+    height: 46px;
+    opacity: 0;
+}
+
+.ds4 .back.pressed, .ds4 .start.pressed {
+    /* background-position-y: -21px; */
+    /* margin-top: 2px; */
+    opacity: 1;
+}
+
+.ds4 .back {
+    float: left;
+    /* width: 28px; */
+}
+
+.ds4 .start {
+    float: right;
+    /* width: 28px; */
+    background-position: 28px 0;
+}
+
 .ds4 .abxy {
     position: absolute;
     width: 170px;
